@@ -35,12 +35,12 @@ TeraSS_Service_Handler::close (unsigned long)
 }
 
 int
-TeraSS_Acceptor::init (int argc, ASYS_TCHAR *argv[])
+TeraSS_Acceptor::init (int argc, ACE_TCHAR *argv[])
 {
   ACE_Get_Opt opt (argc, argv, "p:");
 
   unsigned short p = 0;
-  
+
   int c;
   while ((c = opt ()) != -1)
     switch (c)
@@ -65,4 +65,3 @@ TeraSS_Acceptor::init (int argc, ASYS_TCHAR *argv[])
 }
 
 ACE_SVC_FACTORY_DEFINE (TeraSS_Acceptor)
-
