@@ -55,7 +55,7 @@ class ACE_Svc_Export TeraSS_Acceptor
 {
 public:
 
-  int init (int argc, ASYS_TCHAR *argv[]);
+  int init (int argc, ACE_TCHAR *argv[]);
 
 };
 
