@@ -1,3 +1,10 @@
+Sun Oct 19 21:16:44 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* apps/JAWS3/http/HTTP_Service_Handler.h: 
+	* apps/JAWS3/http/HTTP_Service_Handler.cpp: 
+	* apps/JAWS3/small/SS_Service_Handler.cpp: 
+	* apps/JAWS3/small/SS_Service_Handler.h: Fixed Fuzz errors.
+
 Sun Oct 19 20:36:50 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
 
 	* Kokyu/docs/Kokyu.html:
